# escoteiros-mappa

./: .gitignore  .testing_env  Pipfile  README.md  mappa_xls.ipynb  progressoes_lobo.json  pyproject.toml  setup.py
.github/workflows/: install_lint_test.yml
docs/api_responses/: _api_escotistas_50442_secoes.json  _api_escotistas_50442_secoes_1424_equipes.json  _api_escotistas_52176_secoes.json  _api_escotistas_52176_secoes_1538.json  _api_marcacoes_v2_updates_codigoSecao_1424.json  _api_marcacoes_v2_updates_codigoSecao_1538.json  _api_progressao_atividades.json
mappa/: __init__.py
mappa/models/export/: progressao_secao.py
mappa/models/internal/: user_info.py
mappa/models/mappa/: associado.py  secao.py  subsecao.py
mappa/service/: mappa_export_service.py  mappa_service.py
mappa/tools/: http_response.py  request.py
tests/exports/: test_export_xlsx.py
tests/mocks/: request.py
tests/models/mappa/: test_service.py
