[tool.poetry]
name = "escoteiros-mappa"
version = "0.1.0"
description = ""
authors = ["Guionardo <guionardo@gmail.com>"]
readme = "README.md"
packages = [{include = "escoteiros_mappa"}]

[tool.poetry.dependencies]
python = "^3.10"
cache-guiosoft = "^0.0.7"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
openpyxl = "^3.1.0"
base-model-guiosoft = "^0.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
